# college-projects

./: README.md
EasyEval/: README.md
EasyEval/easyEval/: .gitignore  pom.xml
EasyEval/easyEval/external-data/: easyeval.db
EasyEval/easyEval/src/main/java/: module-info.java
EasyEval/easyEval/src/main/java/be/esi/prj/easyeval/: EasyEvalApplication.java
EasyEval/easyEval/src/main/java/be/esi/prj/easyeval/fxmlcontroller/: CourseManagerController.java  DocumentCreatorController.java  DocumentManagerController.java  SubmissionController.java
EasyEval/easyEval/src/main/java/be/esi/prj/easyeval/model/: Course.java  ExamDocument.java  Question.java  ScanResult.java  Submission.java
EasyEval/easyEval/src/main/java/be/esi/prj/easyeval/repository/: ConnectionManager.java  CourseRepository.java  ExamDocumentRepository.java  QuestionRepository.java  Repository.java  RepositoryException.java  ScanResultRepository.java  SubmissionRepository.java
EasyEval/easyEval/src/main/java/be/esi/prj/easyeval/service/: ExamDocumentService.java  NavigationService.java  TesseractOCRService.java
EasyEval/easyEval/src/main/java/be/esi/prj/easyeval/utils/: ExamDocumentTemplate.java  ImageProcessor.java  ImageZones.java  OCRProcessor.java  TextExtractor.java
Pacman-ML/: README.md
Pacman-ML/pacman_multiagent/: .gitignore  util.py
PacmanMultiAgent/pacman_multiagent/: multiAgents.py  pacman.py
Qwirkle/: README.md  pom.xml
Qwirkle/src/main/java/: App.java
Qwirkle/src/main/java/model/: Bag.java  Color.java  Direction.java  Game.java  Grid.java  GridView.java  Player.java  QwirkleException.java  Shape.java  Tile.java  TileAtPosition.java
Qwirkle/src/main/java/view/: View.java
Qwirkle/src/test/java/model/: BagTest.java  GridTest.java  PlayerTest.java  QwirkleTestUtils.java
Tetris/: README.md
Tetris/project/Tetris_project/: CMakeLists.txt
Tetris/project/Tetris_project/src/: CMakeLists.txt  TetrisApp.cpp
Tetris/project/Tetris_project/src/controller/: Controller.cpp  Controller.h
Tetris/project/Tetris_project/src/model/: GameBoard.cpp  GameBoard.h  GameState.cpp  GameState.h  Observable.cpp  Observable.h  PieceBag.cpp  PieceBag.h  Position.hpp  TetrisGame.cpp  TetrisGame.h  TetrisModel.cpp  TetrisModel.h  observer.cpp  observer.h
Tetris/project/Tetris_project/src/model/pieces/: IPiece.cpp  IPiece.h  JPiece.cpp  JPiece.h  LPiece.cpp  LPiece.h  Piece.cpp  Piece.h  SPiece.cpp  SPiece.h  SquarePiece.cpp  SquarePiece.h  TPiece.cpp  TPiece.h  ZPiece.cpp  ZPiece.h
Tetris/project/Tetris_project/src/view/: ConsoleView.hpp
Tetris/project/Tetris_project/tests/: CMakeLists.txt  testGameBoard.cpp  testPiece.cpp  testPieceBag.cpp  testTetrisModel.cpp
(+21 files in other folders)
